--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "third_party/libwebsockets"]
 	path = third_party/libwebsockets
 	url = https://github.com/warmcat/libwebsockets.git
+[submodule "third_party/qspdlog"]
+	path = third_party/qspdlog
+	url = https://github.com/arsdever/qspdlog.git
