--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -55,10 +55,10 @@ jobs:
     - name: Install Qt
       uses: jurplel/install-qt-action@v4
       with:
-        version: 5.15.*
+        version: 5.8.*
         host: 'linux'
         target: 'desktop'
-        arch: 'linux_amd64_gcc'
+        arch: 'linux_gcc_64'
         modules: 'qtcharts qtconnectivity qtserialbus qtserialport qtwebsockets'
 #        extra: '--exclude-libs=libqsqlmimer'
 
