--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -5,7 +5,7 @@ on: [push]
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  #VSCP_ROOT: ${{github.workspace}}/vscp
+  VSCP_ROOT: ${{github.workspace}}/third_party/vscp
 
 jobs:
   build:
