--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Create environment variable for VSCP_ROOT and Qt6_DIR
       run: |
-        export VSCP_ROOT=${{github.workspace}}/vscp
+        export VSCP_ROOT=${{github.workspace}}/third_party/vscp
         echo echo ${{env.VSCP_ROOT}}
 
     - name: Update before installing packages
