--- a/.github/workflows/appimage.yml
+++ b/.github/workflows/appimage.yml
@@ -6,6 +6,7 @@ env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
   VSCP_ROOT: ${{github.workspace}}/third_party/vscp/
+  VSCP_FIRMWARE: ${{github.workspace}}/third_party/vscp-firmware
 
 jobs:
   build:
