--- a/.github/workflows/cmake-mac.yml
+++ b/.github/workflows/cmake-mac.yml
@@ -33,10 +33,10 @@ jobs:
     - name: Get repository 
       uses: actions/checkout@v4    
 
-    - name: Install openssl
-      run: |
-        brew install openssl@1.1 
-        cp /usr/local/opt/openssl@1.1/lib/pkgconfig/*.pc /usr/local/lib/pkgconfig/
+    # - name: Install openssl
+    #   run: |
+    #     brew reinstall openssl@1.1 
+    #     cp /usr/local/opt/openssl@1.1/lib/pkgconfig/*.pc /usr/local/lib/pkgconfig/
 
     - name: Install libcurl4-openssl-dev manually 
       run: sudo apt install libcurl4-openssl-dev   
